infra/k8s/api/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-service-api
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: job-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-service-api
                port:
                  number: 6500
